# dirc

./: .dirc  README.md  dirc-verify.sh  pyproject.toml
.github/workflows/: dirc.yml
dirc/: cli.py  compiler.py  spec.py
dirc_linter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
scripts/: install-githooks.sh
